# Builder

./: CMakeLists.txt  README.md  backtrace_log.h  configuration.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  window_compiler.cpp  window_compiler.h  worker.cpp  worker.h
